Facet label word-wrap correction

--- a/app/assets/stylesheets/_facets.scss
+++ b/app/assets/stylesheets/_facets.scss
@@ -49,7 +49,7 @@ ul.facet-values li {
     .facet_select, .selected {
         display: block;
         padding: 0 0 0 55px;
-        max-width: 90%;
+        max-width: 85%;
         position: relative;
 
         &:before {
